[project]
name = "04"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "hdbscan>=0.8.43",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "markdown>=3.10.2",
]
